OnboardingV2Minimal/force-app/main/default/objects/Sync_Log__c/Sync_Log__c.object-meta.xml
<CustomObject>
    <description
  >Audit log for synchronization jobs that sync data between Salesforce and external systems or between Salesforce objects and custom metadata. Tracks sync job execution, record counts (inserted/updated/deleted), duration, errors, and manual vs scheduled execution. Example: When OrgWideEmailSyncService runs (either scheduled nightly or manually triggered), it creates a Sync_Log record with Job_Name__c=&quot;Org-Wide Email Sync&quot;, Inserted_Count__c=5, Updated_Count__c=2, Duration_Seconds__c=2.3, and Manual_Run__c=false. This provides visibility into sync operations and helps troubleshoot data consistency issues. Used by admin dashboards to monitor system health and sync status.</description>
    <label>Sync Log</label>
    <nameField>
        <displayFormat>SYNC-{00000}</displayFormat>
        <label>Sync Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sync Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>