OnboardingV2Minimal/force-app/main/default/objects/Sync_Log__c/fields/Async_Operation_ID__c.field-meta.xml
<CustomField>
    <fullName>Async_Operation_ID__c</fullName>
    <description>(Optional) Metadata operation tracker ID.</description>
    <label>Async Operation ID</label>
    <length>19</length>
    <type>Text</type>
</CustomField>