OnboardingV2Minimal/force-app/main/default/objects/Sync_Log__c/fields/Duration_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Duration_Seconds__c</fullName>
    <description>How long the run took.</description>
    <label>Duration (Seconds)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>