OnboardingV2Minimal/force-app/main/default/objects/Sync_Log__c/fields/Inserted_Count__c.field-meta.xml
<CustomField>
    <fullName>Inserted_Count__c</fullName>
    <description>How many Communication Templates inserted.</description>
    <label>Inserted Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>