OnboardingV2Minimal/force-app/main/default/objects/Sync_Log__c/fields/Job_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Name__c</fullName>
    <description>The name of the scheduled or manual sync job.</description>
    <label>Job Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>