OnboardingV2Minimal/force-app/main/default/objects/Sync_Log__c/fields/Manual_Run__c.field-meta.xml
<CustomField>
    <fullName>Manual_Run__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the job was manually triggered.</description>
    <label>Manual Run</label>
    <type>Checkbox</type>
</CustomField>