OnboardingV2Minimal/force-app/main/default/objects/Sync_Log__c/fields/New_CMDTs__c.field-meta.xml
<CustomField>
    <fullName>New_CMDTs__c</fullName>
    <description>CMDT records created.</description>
    <label>New CMDTs</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>