OnboardingV2Minimal/force-app/main/default/objects/Sync_Log__c/fields/Run_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Run_Timestamp__c</fullName>
    <description>hen the job started.</description>
    <label>Run Timestamp</label>
    <type>DateTime</type>
</CustomField>