OnboardingV2Minimal/force-app/main/default/objects/Sync_Log__c/fields/Triggered_By__c.field-meta.xml
<CustomField>
    <fullName>Triggered_By__c</fullName>
    <description>The user or process that ran the job.</description>
    <label>Triggered By</label>
    <length>80</length>
    <type>Text</type>
</CustomField>