OnboardingV2Minimal/force-app/main/default/objects/Sync_Log__c/fields/Updated_Count__c.field-meta.xml
<CustomField>
    <fullName>Updated_Count__c</fullName>
    <description>How many Communication Templates updated.</description>
    <label>Updated Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>